--- a/imdb_analysis.Rmd
+++ b/imdb_analysis.Rmd
@@ -22,7 +22,7 @@ theme_set(theme_minimal())
 # Import data
 dat_kaggle <- readRDS("data/dat_kaggle.rds") 
 
-# Change column names
+# Change column names for linear model functionality
 names(dat_kaggle)[4] <- "Topic_1"
 names(dat_kaggle)[5] <-"Topic_2"
 names(dat_kaggle)[6] <-"Topic_3"
@@ -73,14 +73,10 @@ dat_kaggle$UK[is.na(dat_kaggle$UK)]<- 0
 dat_kaggle$Canada <- NA
 dat_kaggle$Canada[dat_kaggle$country=="Canada"]<-1
 dat_kaggle$Canada[is.na(dat_kaggle$Canada)]<- 0
-# France
-dat_kaggle$France <- NA
-dat_kaggle$France[dat_kaggle$country=="France"]<-1
-dat_kaggle$France[is.na(dat_kaggle$France)]<- 0
 
 # Country Model
-country_model <- lm(rating ~ USA + India + UK + Canada + 
-                France, data = dat_kaggle)
+country_model <- lm(rating ~ USA + India + UK + Canada,
+                    data = dat_kaggle)
 summary(country_model)
 stargazer(country_model,type = "text", out = "Table 2", 
           title = "Country Model: USA, India, UK, Canada and France", 
@@ -143,6 +139,12 @@ stargazer(sk_horror_model,sweden_horror_model,japan_horror_model,
 
 ## Romance Model
 ``` {r romance model, warning = FALSE}
+# Create country dummy variable
+# France
+dat_kaggle$France <- NA
+dat_kaggle$France[dat_kaggle$country=="France"]<-1
+dat_kaggle$France[is.na(dat_kaggle$France)]<- 0
+
 # Romance Model
 france_romance_model <- lm(rating ~ France*Topic_7, data = dat_kaggle)
 summary(france_romance_model)
@@ -155,7 +157,7 @@ stargazer(france_romance_model,uk_romance_model,
           omit.stat=c("LL","ser","f","adj.rsq"), 
           dep.var.labels.include = FALSE,
           column.labels = c("Rating in France", "Rating in UK"))
-# Note: French romances have a statistically significant, negative effect on the rating. On th other hand, rating increases if a British movie turns out to be a romance. 
+# Note: French romances have a statistically significant, negative effect on the rating. On the other hand, rating increases if a British movie turns out to be a romance. 
 ```
 
 ## Crime Model 
@@ -169,6 +171,7 @@ dat_kaggle$Denmark[is.na(dat_kaggle$Denmark)]<- 0
 # Crime Model
 denmark_crime_model <- lm(rating ~ Denmark*Topic_9, data = dat_kaggle)
 sweden_crime_model <- lm(rating ~ Sweden*Topic_9, data = dat_kaggle)
+summary(sweden_crime_model)
 stargazer(denmark_crime_model ,sweden_crime_model,
           type = "text", out = "Table 6", 
           title = "Who Makes Better Police Movies? Denmark vs.Sweden", 
@@ -182,15 +185,15 @@ stargazer(denmark_crime_model ,sweden_crime_model,
 ```{r USA mode, warning = FALSE}
 # USA model
 usa_crime_model <- lm(rating ~ USA*Topic_9, data = dat_kaggle)
-usa_fiction_model<- lm(rating ~ USA*Topic_1, data = dat_kaggle)
+usa_battle_model<- lm(rating ~ USA*Topic_1, data = dat_kaggle)
 summary(usa_crime_model)
-summary(usa_fiction_model)
-stargazer(usa_crime_model,usa_fiction_model,
+summary(usa_battle_model)
+stargazer(usa_crime_model,usa_battle_model,
           type = "text", out = "Table 7", 
-          title = "USA: Crime & Fiction Movies", 
+          title = "USA: Crime & Battle Movies", 
           omit.stat=c("LL","ser","f","adj.rsq"), 
           dep.var.labels.include = FALSE,
-          column.labels = c("Rating of Crime Movies", "Rating of Finction Movies"))
+          column.labels = c("Rating of Crime Movies", "Rating of Battle Movies"))
 # Note: USA-made killer-cop-gang-serial films seem to do  better than the average USA-made film.
 ```
 
